<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    android:background="@drawable/carts"
    tools:context=".Cart">

    <ListView
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/list_cart"

        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        android:clickable="true"
        android:background="@android:color/transparent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:dividerHeight="5dp"
        tools:listitem="@layout/cart_layout">

    </ListView>



    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/total"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/total"
                    android:text="@string/_10000"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />




            </LinearLayout>
            <Button
                android:id="@+id/button_place_order"
                android:text="@string/place_order"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:background="#b60684"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>