<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product_Details_and_cart">

    <android.support.design.widget.AppBarLayout

        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout

            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#19ce0c"
            app:expandedTitleTextAppearance="@android:color/transparent">

            <ImageView
                android:id="@+id/product_image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            
            <android.support.v7.widget.Toolbar
                android:id="@+id/tollbar"
                app:title="Product Name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton

        android:id="@+id/btnCart1"
        app:srcCompat="@drawable/ic_shopping_cart_black_24dp"
        android:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true"
        />

    <android.support.v4.widget.NestedScrollView

        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginTop="8dp"
                        android:id="@+id/product_name1"
                        android:padding="12dp"
                        android:text="@string/product_name"
                        android:textColor="#1fa716"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/layout_price"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            app:srcCompat="@drawable/ic_attach_money_black_24dp"

                            android:contentDescription="@string/TODO"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/product_price1"
                            android:text="@string/_1000"
                            android:textColor="#1fa716"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_marginStart="8dp"
                            android:text="@string/tk"
                            android:textColor="#1fa716"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/number_button1"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="18dp"
                        app:textSize="12sp"
                        app:backGroundColor="#1fa716"
                        app:initialNumber="1"
                        app:finalNumber="20"
                        android:layout_width="100dp"
                        android:layout_height="40dp">

                    </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>




                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/product_description1"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>